--- a/homework_2-master/index.html
+++ b/homework_2-master/index.html
@@ -5,6 +5,7 @@
     <title>4 Uno Rules You're Playing Wrong</title>
     <!-- Add link to two style sheets here. -->
     <link rel="stylesheet" href="html5reset.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
