--- a/homework_2-master/index.html
+++ b/homework_2-master/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>4 Uno Rules You're Playing Wrong</title>
     <!-- Add link to two style sheets here. -->
-    <link rel="stylesheet" href="html5reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/html5reset.css">
   </head>
   <body>
     <header>
